--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app-sandbox"></div>
-    <div id="app-element"></div>
+    <div id="app-simple"></div>
+    <div id="app-advanced"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
