--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,6 +9,7 @@
   <body>
     <div id="app-simple"></div>
     <div id="app-advanced"></div>
+    <div id="app-spa"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
